--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "author": "AndriiSafonov",
   "license": "ISC",
   "dependencies": {
-    "currency-converter-lt": "^2.0.0-beta.0"
+    "currency-converter-lt": "^2.0.0-beta.0",
+    "ejs": "^3.1.9",
+    "express": "^4.18.2"
   }
 }
